# Multi-Calculator

./: CMakeLists.txt
main/include/model/matrices/: Matrix.h
main/moc/: moc_button.cpp  moc_calculatorGUI.cpp  moc_graphGUI.cpp  moc_mainwindow.cpp  moc_matrixGUI.cpp  moc_predefs.h  moc_qcustomplot.cpp  moc_setsGUI.cpp  moc_stepsGUI.cpp
